# kusa-monitor

./: .gitignore  Cargo.toml  Makefile  README.md  _config.yml  package-lock.json  package.json
frontend/: index.html
frontend/plotters/: index.html
src/: chart.rs  lib.rs  plot_thread.rs  utils.rs
src/plotters/: func_plot.rs  mandelbrot.rs  mod.rs
