[package]
name = "app"
version = "0.0.0"
authors = ["The Kusa Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

plotters = "0.2"
wee_alloc = "0.4"

##wasm-mt = "0.1"
wasm-mt = { path = '../wasm-mt' }
serde = { version = "1.0", features = ["derive"] }
serde_closure = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'Node',
  'Window',
]
